--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "onednn"]
-	path = onednn
-	url = https://github.com/CaoZhongZ/libraries.performance.math.onednn.git
+  path = onednn
+  url = https://github.com/dbyoung18/libraries.performance.math.onednn.git
